@@ -1,3 +1,6 @@
+# Copyright (c) 2018 Patricio Cubillos and contributors.
+# bibmanager is open-source software under the MIT license (see LICENSE).
+
 import os
 import sys
 from setuptools import setup
